fix card header overflow

--- a/web_ui/src/components/card-popup.scss
+++ b/web_ui/src/components/card-popup.scss
@@ -6,7 +6,10 @@
     background: #333333;
     font-family: "Roboto Black";
     border-radius: 1vh;
-    position: relative;
+    position: fixed;
+    bottom: 5%;
+    right: 5%;
+    z-index: 1;
 
     section {
         margin: 1vh 0;
@@ -23,6 +26,13 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
+
+        h1 {
+            margin-right: 2vh;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+        }
     }
 
     .rating {
@@ -71,7 +81,7 @@
             justify-content: space-between;
 
             /* * TRAILER ICON */
-            i {
+            svg {
                 font-size: 0.9em;
             }
         }
@@ -127,7 +137,7 @@
     }
 
     /* ICON */
-    i {
+    svg {
         margin: 0 5px 0 5px;
         font-size: 0.5em;
     }
